# bbgo

./: .aiignore  .dockerignore  .env  .env.local.example  .evans.toml  .gitattributes  .gitignore  .golangci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  CLA.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  README.zh_TW.md  app.json  bbgo.sql  codecov.yaml  codecov.yml  deploy.sh  go.mod  go.sum  index.yaml  rockhopper_mysql.yaml  rockhopper_postgres.yaml  rockhopper_sqlite.yaml  symbols.go
.github/: FUNDING.yml  dependabot.yml
.junie/: guidelines.md
accounting/: pnl.go  report.go
bbgo/: account.go  calc.go  (+25 more)
python/: README.md  bbgo_pb2.py  bbgo_pb2_grpc.py  pyproject.toml  query_klines.py  setup.cfg  stream.py  subscribe.py
python/bbgo/: __init__.py  bbgo.py  bbgo_pb2.py  bbgo_pb2_grpc.py  services.py  stream.py  utils.py
python/bbgo/data/: __init__.py  balance.py  depth.py  error.py  event.py  kline.py  order.py  submit_order.py  subscription.py  ticker.py  trade.py
python/bbgo/enums/: __init__.py  channel_type.py  depth_type.py  event_type.py  order_type.py  side_type.py
python/bbgo/handlers/: __init__.py  balance.py  book.py  error.py  handler.py  kline.py  order.py  snapshot.py  ticker.py  trade.py  update.py
python/bbgo/utils/: __init__.py  convert.py  grpc_utils.py
python/examples/: query_klines.py  stream.py  subscribe_user_data.py
python/pybbgo/: bbgo_pb2.py  bbgo_pb2_grpc.py
python/tests/: servicer.py  test_data.py  test_enums.py  test_grpc.py  test_utils.py
(+3790 files in other folders)
