[tool.poetry]
name = "bbgo"
version = "0.1.9"
description = ""
authors = ["なるみ <weaper@gmail.com>"]
packages = [
    { include = "bbgo" },
    { include = "bbgo_pb2.py" },
    { include = "bbgo_pb2_grpc.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
loguru = "^0.6.0"
grpcio = "^1.44.0"
grpcio-tools = "^1.44.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
